# khronos

./: .gitignore  Cargo.toml  IT_it.po  README.md  io.github.lainsce.Khronos.Devel.json  io.github.lainsce.Khronos.doap  khronos.doap  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
_build/: .ninja_deps  .ninja_log  as-resources.c  build.ninja  compile_commands.json  config.h  io.github.lainsce.Khronos
_build/data/: io.github.lainsce.Khronos.appdata.xml  io.github.lainsce.Khronos.desktop
_build/io.github.lainsce.Khronos.p/src/: Application.c  MainWindow.c  Prefs.c
_build/io.github.lainsce.Khronos.p/src/Services/: Dialog.c  FileManager.c  TaskManager.c
_build/io.github.lainsce.Khronos.p/src/Widgets/: Box.c  LogRow.c
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
_build/meson-logs/: install-log.txt  meson-log.txt
_build/meson-private/: coredata.dat.prev
_build/po/: ca.gmo  fr.gmo  ja.gmo  nl.gmo  pt.gmo  pt_BR.gmo
build-aux/: post_install.py
build-aux/flatpak/: io.github.lainsce.Khronos.Devel.json  io.github.lainsce.Khronos.json  io.github.lainsce.KhronosDevel.json
data/: com.github.lainsce.khronos.appdata.xml.in  com.github.lainsce.khronos.desktop.in  com.github.lainsce.khronos.gschema.xml  io.github.lainsce.Khronos.appdata.xml.in  io.github.lainsce.Khronos.desktop.in  io.github.lainsce.Khronos.gresource.xml  io.github.lainsce.Khronos.gschema.xml  io.github.lainsce.Khronos.metainfo.xml.in  meson.build  style-dark.css  style-hc.css  style.css  style.gresource.xml  stylesheet.css
data/icons/: meson.build
data/icons/hicolor/: meson.build
data/ui/: loglistview.ui  logrow.ui  logrowcontent.ui  main_window.ui  mainmenu.ui  prefs.ui
meson/: post_install.py
nix/: README.md  default.nix
po/: LINGUAS  POTFILES  README.md  ca.po  com.github.lainsce.khronos.pot  cs.po  da.po  de.mo  de.po  es.po  fr.po  he.po  hi.po  hr.po  id.po  io.github.lainsce.Khronos.pot  it.po  ja.po  lt.po  nl.po  pt.po  pt_BR.po  ru_RU.po  sk.po  sr.po  sr@latin.po  sv.po  tr.po  zh_CN.po
po/extra/: LINGUAS  POTFILES  ca.po  da.po  de.mo  de.po  es.po  extra.pot  fr.po  hr.po  id.po  it.po  ja.po  lt.po  nl.po  nl_NL.po  pt.po  pt_BR.po  sr.po  sr@latin.po  sv.po
src/: Application.vala  MainWindow.vala  Prefs.vala  app.rs  config.rs  config.rs.in  i18n.rs  main.rs  meson.build
src/Models/: Log.vala
src/Repositories/: LogRepository.vala
src/Services/: Dialog.vala  FileManager.vala  MigrationManager.vala  SettingsManager.vala  TaskManager.vala
src/Utils/: FileUtils.vala  MiscUtils.vala  ObservableList.vala  ThreadUtils.vala
src/ViewModels/: LogViewModel.vala
src/Views/: LogListView.vala  View.vala
src/Widgets/: Box.vala  Column.vala  ColumnListBox.vala  EventBox.vala  LogRow.vala  LogRowContent.vala  TagHolder.vala
src/ui/: about.rs  log.rs  logrow.rs  mod.rs  prefs.rs  window.rs
