[package]
name = "khronos"
version = "4.0.1"
edition = "2018"

[dependencies]
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
serde_urlencoded = "0.7.0"
strum = "0.20.0"
strum_macros = "0.20.1"
futures = "0.3.12"
futures-io = "0.3.12"
futures-util = "0.3.12"
async-std = "1.9.0"
once_cell = "1.8.0"
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
adw = { version = "0.1.0-alpha", package = "libadwaita" }
gtk = { version = "0.3.0", package = "gtk4" }
gtk-macros = "0.3.0"
regex = "1.4.3"
